--- a/index.html
+++ b/index.html
@@ -275,6 +275,125 @@
                 <a href="#" class="main-btn btn btn-primary ps-4 pe-4 rounded-pill text-uppercase">Start Project</a>
             </div>
         </div>
+        <div class="blog pt-5 pb-5">
+            <div class="container">
+                <div class="main-title text-center mt-5 mb-5 position-relative">
+                    <img class="mb-4" src="./images/title.png" alt="img...!">
+                    <h3>Read Our Blog</h3>
+                    <p class="text-black-50 text-uppercase">New Stories</p>
+                </div>
+                <div class="row pt-4 pb-4">
+                    <div class="col-md-6 col-lg-4">
+                        <div class="card">
+                            <img src="./images/blog-1.jpg" alt="blog-img...!" class="card-img-top">
+                            <div class="card-body">
+                                <span class="text-black-50">Jan 17, 2023</span>
+                                <h5 class="card-title">Some Awesome Blog Title Here</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="card">
+                            <img src="./images/blog-2.jpg" alt="blog-img...!" class="card-img-top">
+                            <div class="card-body">
+                                <span class="text-black-50">Jan 17, 2023</span>
+                                <h5 class="card-title">Some Awesome Blog Title Here</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="card">
+                            <img src="./images/blog-3.jpg" alt="blog-img...!" class="card-img-top">
+                            <div class="card-body">
+                                <span class="text-black-50">Jan 17, 2023</span>
+                                <h5 class="card-title">Some Awesome Blog Title Here</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class=" d-flex justify-content-center align-items-center mt-5 mb-5">
+                    <a href="#" class="main-btn btn btn-primary ps-4 pe-4 rounded-pill text-uppercase">More Stories</a>
+                </div>
+            </div>
+        </div>
+        <div class="subscribe pt-5 pb-5 text-center text-md-start">
+            <div class="container">
+                <form class="row align-items-center">
+                    <div class="col-md-6 col-lg-3">
+                        <div class=" fw-bold fs-4 mb-3">Subscribe to our Newsletter:</div>
+                    </div>
+                    <div class="col-md-6 col-lg-7 mb-5 m-md-0">
+                        <input class="w-100 p-2 text-light bg-transparent" type="text"
+                            placeholder="Enter Email Address">
+                    </div>
+                    <div class="col col-lg-2 text-center text-md-end m-auto mt-md-3 m-lg-0">
+                        <input class="btn rounded-pill" type="submit" value="subscribe">
+                    </div>
+                </form>
+            </div>
+        </div>
+        <div class="footer pt-5 pb-5 text-white-50 text-center text-md-start">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-6 col-lg-4 ">
+                        <div class="info mb-5">
+                            <img src="./images/logo.png" alt="logo-img...!" class="mb-4">
+                            <p class="mb-5">Pellentesque in ipsum id orci porta dapibus. Vivamus magna justo, lacinia
+                                eget
+                                consectetur sed, convallis at tellus</p>
+                            <div>Created By <div class="yellow-color">Graphberry</div>
+                            </div>
+                            <div>© 2022 - <span class="green-color">Bondi Inc</span></div>
+                        </div>
+                    </div>
+                    <div class="links col-sm-6 col-lg-2 ">
+                        <h4 class=" text-light fs-4">Links</h4>
+                        <ul class=" list-unstyled lh-lg">
+                            <li>Home</li>
+                            <li>Our Services</li>
+                            <li>Portfolio</li>
+                            <li>Testimonials</li>
+                            <li>Support</li>
+                            <li>Terms and Condition</li>
+                        </ul>
+                    </div>
+                    <div class="about-as col-sm-6 col-lg-2">
+                        <h4 class=" text-light fs-4">About Us</h4>
+                        <ul class=" list-unstyled lh-lg">
+                            <li>Sign In</li>
+                            <li>Register</li>
+                            <li>About Us</li>
+                            <li>Blog</li>
+                            <li>Contact Us</li>
+                        </ul>
+                    </div>
+                    <div class="contact-us col-sm-6  col-lg-4">
+                        <h4 class=" text-light fs-4">Contact Us</h4>
+                        <p class="mb-5">Get in touch with us via mail phone.We are waiting for your call or message</p>
+                        <a href="#" class="main-btn btn btn-primary  pt-2 pb-2 rounded-pill w-100">
+                            ahmedalbakrycool@gmail.com </a>
+                        <ul class=" icons d-flex mt-4 list-unstyled gap-3">
+                            <li>
+                                <a class="d-block text-light" href="#"><i
+                                        class="fa-brands fa-facebook fa-lg facebook rounded-circle p-2"></i></a>
+                            </li>
+                            <li>
+                                <a class="d-block text-light" href="#"><i
+                                        class="fa-brands fa-twitter fa-lg twitter rounded-circle p-2"></i></a>
+                            </li>
+                            <li>
+                                <a class="d-block text-light" href="#"><i
+                                        class="fa-brands fa-linkedin fa-lg linkedin rounded-circle p-2"></i></a>
+                            </li>
+                            <li>
+                                <a class="d-block text-light" href="#"><i
+                                        class="fa-brands fa-youtube fa-lg youtube rounded-circle p-2"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
         <script src="./js/bootstrap.bundle.min.js"></script>
         <script s4c="./js/all.min.js"></script>
     </body>
