--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <p class="text-black-50 text-uppercase">Some Of These stuff Under</p>
                 </div>
                 <div class="row">
-                    <div class="col-md-6 col-lg-4">
+                    <div class="box-card col-md-6 col-lg-4">
                         <div class="icon-holder position-relative">
                             <i class="fa-solid  fa-1 position-absolute bottom-0 number"></i>
                             <i class="fa-solid fa-4x fa-pencil position-absolute  bottom-0 icon"></i>
@@ -78,7 +78,7 @@
                         <p class=" text-black-50 lh-lg">Pellentesque in ipsum id orci porta dapibus. Vivamus magna
                             justo, lacinia eget consectetur sed, convallis at tellus.</p>
                     </div>
-                    <div class="col-md-6 col-lg-4">
+                    <div class="box-card col-md-6 col-lg-4">
                         <div class="icon-holder position-relative">
                             <i class="fa-solid  fa-2 position-absolute bottom-0 number"></i>
                             <i class="fa-solid fa-4x fa-tv position-absolute  bottom-0 icon"></i>
@@ -87,7 +87,7 @@
                         <p class=" text-black-50 lh-lg">Pellentesque in ipsum id orci porta dapibus. Vivamus magna
                             justo, lacinia eget consectetur sed, convallis at tellus.</p>
                     </div>
-                    <div class="col-md-6 col-lg-4">
+                    <div class="box-card col-md-6 col-lg-4">
                         <div class="icon-holder position-relative">
                             <i class="fa-solid  fa-3 position-absolute bottom-0 number"></i>
                             <i class="fa-solid fa-4x fa-plug position-absolute  bottom-0 icon"></i>
@@ -204,7 +204,7 @@
                     eget tincidunt nibh pulvinar a. Pellentesque in ipsum id orci porta dapibus. Proin eget tortor
                     risus. Donec sollicitudin molestie malesuada.</p>
                 <div class="row">
-                    <div class="col-md-6 col-lg-3">
+                    <div class="box-card col-md-6 col-lg-3">
                         <div class="box bg-white">
                             <img class=" img-fluid" src="images/team-1.png" alt="">
                             <h4 class=" text-white p-3">Luke Skywalker</h4>
@@ -213,7 +213,7 @@
                             </blockquote>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-3">
+                    <div class="box-card col-md-6 col-lg-3">
                         <div class="box bg-white">
                             <img class=" img-fluid" src="images/team-2.png" alt="">
                             <h4 class=" text-white p-3">Luke Skywalker</h4>
@@ -222,7 +222,7 @@
                             </blockquote>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-3">
+                    <div class="box-card col-md-6 col-lg-3">
                         <div class="box bg-white">
                             <img class=" img-fluid" src="images/team-3.png" alt="">
                             <h4 class=" text-white p-3">Luke Skywalker</h4>
@@ -231,7 +231,7 @@
                             </blockquote>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-3">
+                    <div class="box-card col-md-6 col-lg-3">
                         <div class="box bg-white">
                             <img class=" img-fluid" src="images/team-4.png" alt="">
                             <h4 class=" text-white p-3">Luke Skywalker</h4>
@@ -395,7 +395,8 @@
             </div>
         </div>
         <script src="./js/bootstrap.bundle.min.js"></script>
-        <script s4c="./js/all.min.js"></script>
+        <script src="./js/all.min.js"></script>
+        <script src="./js/app.js"></script>
     </body>
 
 </html5
