--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
                             <a class="nav-link p-lg-3 active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link p-lg-3" href="#">Services</a>
+                            <a class="nav-link p-lg-3" href="#services">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link p-lg-3" href="#">Portfolio</a>
+                            <a class="nav-link p-lg-3" href="#portfolio">Portfolio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link p-lg-3" href="#">About</a>
+                            <a class="nav-link p-lg-3" href="#about">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link p-lg-3" href="#">Contact</a>
+                            <a class="nav-link p-lg-3" href="#contact">Contact</a>
                         </li>
 
                     </ul>
@@ -61,7 +61,7 @@
 
             </div>
         </div>
-        <div class="features text-center pt-5 pb-5">
+        <div class="features text-center pt-5 pb-5" id="services">
             <div class="container">
                 <div class="main-title mt-5 mb-5 position-relative">
                     <img class="mb-4" src="./images/title.png" alt="img...!">
@@ -100,7 +100,7 @@
 
             </div>
         </div>
-        <div class="our-work text-center pt-5 pb-5">
+        <div class="our-work text-center pt-5 pb-5" id="portfolio">
             <div class="container ">
                 <div class="main-title mt-5 mb-5 position-relative">
                     <img class="mb-4" src="./images/title.png" alt="img...!">
@@ -162,7 +162,7 @@
                 </div>
             </div>
         </div>
-        <div class="stuff pt-5">
+        <div class="stuff pt-5" id="about">
             <div class="container">
                 <div class="main-title text-center mt-5 mb-5 position-relative">
                     <img class="mb-4" src="./images/title.png" alt="img...!">
@@ -332,7 +332,7 @@
                 </form>
             </div>
         </div>
-        <div class="footer pt-5 pb-5 text-white-50 text-center text-md-start">
+        <div class="footer pt-5 pb-5 text-white-50 text-center text-md-start" id="contact">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6 col-lg-4 ">
